<resources>
    <string name="app_name">Dummy</string>
    <string name="emailLoginHint">Email Id or Mobile Number</string>
    <string name="passwordHint">Enter password</string>
    <string name="forgotPwd">Forgot Password?</string>
    <string name="signin">Sign In</string>
    <string name="createAd">Create Ad</string>
    <string name="sellerlabel">Seller Name</string>
    <string name="carName">Model Name</string>
    <string name="manuName">Manufacture Name</string>
    <string name="exShowroomprice">Ex Showroom Price</string>
    <string name="rto">RTO</string>
    <string name="uploadPhoto"><u>Upload Photo</u></string>
    <string name="mileage">Mileage</string>
    <string name="color">Colour</string>
    <string name="price">Price</string>
    <string name="contact">Contact Me</string>
    <string name="namelabel">Enter Name</string>
    <string name="msglabel">Enter Message</string>
    <string name="send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
