<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/car_icon"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/backgrnd_drawable"
        android:padding="10dp"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/user_icon"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:background="@null"
            android:hint="@string/emailLoginHint"
            android:layout_marginRight="10dp"
            android:paddingRight="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/backgrnd_drawable"
        android:padding="10dp"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/lock"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/passwordHint"
            android:background="@null"
            android:paddingRight="10dp"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/primaryColor"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:textSize="18dp"
        android:text="@string/forgotPwd"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignIn"
        android:textColor="@color/primaryDarkColor"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:background="@drawable/login_btn_drawable"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/signin"/>
    </LinearLayout>